WIP: clean up Java API (#36)
* WIP: clean up Java API

* update V0 Spec

* WIP: fix tests

* Finish fixing the Java implementation's test suite

Wires up the lib.Catalog dynamic-name resolution that PolicyBuilder/Policy
never actually used, fixes the action/subject matching bug in
Policy.checkPermission (it compared an incoming action against a rule's
subject name), and ports the construction-time validation (malformed rule
tuples, EC-6, meta.actions/subjects/operators coverage, operator collision
detection) from the JS reference implementation, which the Java port never
had.

Also:
- ConditionResolver now accepts a Condition instance directly (not just its
  toMap() form) and defaults to the built-in operator catalog instead of a
  null registry.
- Condition no longer uses Map.of() for single-entry maps, which rejects a
  null value (e.g. Condition.op("$ne", null)).
- KeycardConfig.anyAction/anySubject default to undeclared instead of
  eagerly wrapping "_ANY_", so PolicyBuilder can tell "never configured"
  apart from "explicitly set".
- ActionCatalog/SubjectCatalog drop their unused, incorrectly-keyed
  reverse-lookup fields now that resolution goes through lib.Catalog.
- Fixes a couple of test typos (wrong catalog key, a PolicyBuilder built
  without the KeycardConfig it was supposed to use) and restores
  ConformanceFixtureTest's per-fixture custom operators, which had been
  swapped for an unrelated example app's config.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QuEoHtcPrBcq5iExXQmPUn

* Fix invalid combined @param Javadoc tag in Policy.validateRules

Split "@param configActionNames/@param configSubjectNames" (copied
verbatim from the JS reference's JSDoc style, which isn't valid Javadoc)
into two separate, properly-formed @param tags.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QuEoHtcPrBcq5iExXQmPUn

---------

Co-authored-by: Claude 